--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -8,10 +8,14 @@
 
 /* CSS for sidebars dropdown in mobile view */
 
+ul#languages-dropdown-items {
+    background-color: #EFEFF2;
+}
+
 @media only screen and (max-width: 735px){
 ul#languages-dropdown-items {
     display: block;
-    background-color: #ffffff;
+    background-color: #EFEFF2;
 }
 .stateful-applications_row {
   justify-content: center;
@@ -31,7 +35,7 @@ body{
 
 /* Navigation header bg color */
 .fixedHeaderContainer {
-    background: #262B3E;
+    background: #23232A;
 }
 
 /* Content headers */
@@ -41,7 +45,7 @@ body{
     color: #262B3E;
 }
 .container .wrapper h2 {
-    color: #262B3E;
+    color: #0063ff;
 }
 .container .wrapper h3 {
     color: #262B3E;
@@ -54,7 +58,7 @@ body{
     padding: 0 0 30;
     font-family: helvetica;
   font-weight: 200;
-    color: #262B3E;
+    color: #23232A;
 }
 .mainContainer .wrapper .post h1, .mainContainer .wrapper .post h2 {
     font-weight: 300;
@@ -132,7 +136,7 @@ footer .sitemap .nav-home {
 
 /* Side bar*/
 nav.toc .toggleNav {
-    background: #f5f7fa;
+    background: #EFEFF2;
     padding: 3%;
 }
 
@@ -149,19 +153,40 @@ nav.toc .toggleNav .navGroup h3 {
     font-size: 20px;
 }
 nav.toc .toggleNav ul li.navListItemActive {
-    background: #a9a9a9;
+    background: #1BE0E6;
     color: #f5f7fa;
 }
 nav.toc .toggleNav ul li a.navItemActive{
-    color: #f5f7fa;
+    color: #000000;
 }
 nav.toc .toggleNav .navGroup.navGroupActive h3 {
-    background:#f5f7fa;
-    color:#f1584d;
+    background:#EFEFF2;
+    color:#0063ff;
     font-size: 15px;
     text-transform: uppercase;
 }
-
+.button:hover{
+    background: #0063ff;
+}
+.button{
+    border: 1px solid #1BE0E6;
+}
+.navSearchWrapper::after {
+    background: #c8b7b7;
+}
+input::placeholder{
+    color: #c8b7b7;
+    opacity: 1;
+}
+.navSearchWrapper::before {
+    border: 3px solid #c8b7b7;
+}
+._hj-f5b2a1eb-9b07_widget ._hj-f5b2a1eb-9b07_icon_emotion_default._hj-f5b2a1eb-9b07_bottom_position_launcher .path1::before {
+    color: #1BE0E6 !important;;
+}
+#_hj-f5b2a1eb-9b07_feedback_open_close {
+    background-color: #1BE0E6 !important;
+}
 nav.toc .toggleNav .navGroup.navGroupActive {
     background: #f5f7fa;
     padding: '20px 0';
@@ -266,16 +291,22 @@ table tr th {
 /* CSS for search bar */
 input#search_input_react
 {
-    background-color: #7B787D;
+    background-color: #EFEFF2;
     font-weight:400;
-    width:500px;
+    width:376px;
     line-height: 28px;
+    border-radius: 6px;
+    color: black;
 }
 input#search_input_react:focus, input#search_input_react:active {
-    width: 500px;
-    background-color: #7B787D;
+    width: 376px;
+    background-color: #EFEFF2;
+    color: black;
 }
 
+#docsNav {
+    background-color: #EFEFF2;
+}
 #panel, .flip {
     cursor: pointer;
 }
