--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -92,7 +92,7 @@ img {
 
 /* CSS for footer */
 footer.nav-footer {
-    background: #1b1b1b;
+    background: #23232A;
 }
 
 footer .sitemap .nav-home {
