--- a/website/static/css/back-to-top.css
+++ b/website/static/css/back-to-top.css
@@ -6,8 +6,8 @@
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
     outline: none; /* Remove outline */
-    background-color: red; /* Set a background color */
-    color: white; /* Text color */
+    background-color: #696969; /* Set a background color */
+    color: #000000; /* Text color */
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 15px; /* Some padding */
     border-radius: 10px; /* Rounded corners */
