--- a/website/static/css/custom.css
+++ b/website/static/css/custom.css
@@ -1,26 +1,35 @@
 /* your custom css */
-
-@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
+@media only screen and (max-width: 735px) {
+  .nav-footer .sitemap > div {
+    padding-right: 32px;
+    padding-left: 0;
+  }
 }
 
-@media only screen and (min-width: 1024px) {
-}
-
-@media only screen and (max-width: 1023px) {
-}
-
-@media only screen and (min-width: 1400px) {
-}
-
-@media only screen and (min-width: 1500px) {
+@media only screen and (min-width: 735px) {
+  .nav-footer .sitemap > div {
+    padding: 0 32px;
+  }
 }
 
 .fixedHeaderContainer {
-    background: #23232a;
+  background: #23232a;
 }
 
 /* .fixedHeaderContainer header .headerTitleWithLogo { */
-    /* font-size: 2em; */
-    /* font-weight: 100; */
+/* font-size: 2em; */
+/* font-weight: 100; */
 /* } */
 
+.footerText {
+  text-align: left;
+  color: white;
+}
+
+.nav-footer .sitemap div:first-child {
+  flex-grow: 4;
+}
+
+.nav-footer .sitemap div:last-child {
+  padding-left: 0;
+}
